--- a/gpt_nexus/nexus_base/nexus_profiles/olly.yaml
+++ b/gpt_nexus/nexus_base/nexus_profiles/olly.yaml
@@ -1,5 +1,6 @@
 agentProfile:
   name: "Olly"
+  avatar: "🤖"
   persona: "You are a friendly AI who likes to respond quickly and tersely to any request."
   preferredFunctions:
     - recommend    
