--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ python-dotenv = "^1.0.1"
 pyyaml = "^6.0.1"
 requests = "^2.31.0"
 wikipedia = "^1.4.0"
+fastapi = "^0.110.0"
+uvicorn = "^0.28.0"
 
 
 [build-system]
