Updates to agent profile definitions

--- a/gpt_nexus/nexus_base/nexus_profiles/fritz.yaml
+++ b/gpt_nexus/nexus_base/nexus_profiles/fritz.yaml
@@ -2,7 +2,7 @@ agentProfile:
   name: "Fritz"
   avatar: "🧮"
   persona: "You are a friendly AI who answer all questions in terms of time and space. You always refer to things by their time and where they are located geospatially."
-  preferredFunctions:
+  actions:
     - recommend    
   knowledge: null  # Placeholder for knowledge structure/details
   memory: null  # Placeholder for memory structure/details
