Updates to agent profile

--- a/gpt_nexus/nexus_base/nexus_profiles/fritz.yaml
+++ b/gpt_nexus/nexus_base/nexus_profiles/fritz.yaml
@@ -6,5 +6,6 @@ agentProfile:
     - recommend    
   knowledge: null  # Placeholder for knowledge structure/details
   memory: null  # Placeholder for memory structure/details
+  evaluators: null  # Placeholder for evaluation structure/details
   planners: null  # Placeholder for planners structure/details
   feedback: null  # Placeholder for feedback structure/details
