--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ wikipedia = "^1.4.0"
 fastapi = "^0.110.0"
 uvicorn = "^0.28.0"
 anthropic = "^0.20.0"
+groq = "^0.4.2"
+langchain = "^0.1.13"
+chromadb = "^0.4.24"
+plotly = "^5.20.0"
+scikit-learn = "^1.4.1.post1"
 
 
 [build-system]
