--- a/.gitignore
+++ b/.gitignore
@@ -159,4 +159,15 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-nexus.db
+nexus.db*
+
+*.sqlite3
+*.sqlite3-journal
+*.sqlite3-shm
+*.sqlite3-wal
+
+# Ignore all .env files
+.env
+
+*.bin 
+*.log
