--- a/gpt_nexus/nexus_base/nexus_profiles/adam.yaml
+++ b/gpt_nexus/nexus_base/nexus_profiles/adam.yaml
@@ -4,8 +4,11 @@ agentProfile:
   persona: "I am a friendly AI who likes to respond quickly and tersely to any request."
   actions:
     - recommend    
-  knowledge: null  # Placeholder for knowledge structure/details
-  memory: null  # Placeholder for memory structure/details
+  knowledge: 
+    - code
+  memory: 
+    - semantic
+  reasoners: null  # Placeholder for reasoning structure/details
   evaluators: null  # Placeholder for evaluation structure/details
   planners: null  # Placeholder for planners structure/details
   feedback: null  # Placeholder for feedback structure/details
