--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ langchain = "^0.1.13"
 chromadb = "^0.4.24"
 plotly = "^5.20.0"
 scikit-learn = "^1.4.1.post1"
+barfi = "^0.7.0"
+pybars3 = "^0.9.7"
+streamlit-code-editor = "^0.1.12"
 
 
 [build-system]
