Update new prompt template grammar language and other good stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
       "editor.defaultFormatter": "charliermarsh.ruff"
     },
     "python.testing.pytestArgs": [
-      "chatter"
+      "tests"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
