--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,8 +16,8 @@
       "type": "debugpy",
       "request": "launch",
       "module": "streamlit",
-      "args": ["run", "gpt_nexus/streamlit_ui.py"],
-      "justMyCode": false
+      "args": ["run", "gpt_nexus/streamlit_main.py"],
+      "justMyCode": True
     },
     {
       "name": "Python Debugger: FastAPI API",
