--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
       "type": "debugpy",
       "request": "launch",
       "module": "streamlit",
-      "args": ["run", "gpt_nexus/streamlit_main.py"],
+      "args": ["run", "nexus/streamlit_main.py"],
       "justMyCode": True
     },
     {
@@ -24,7 +24,7 @@
       "type": "debugpy",
       "request": "launch",
       "module": "uvicorn",
-      "args": ["gpt_nexus.api.main:app", "--reload" ]
+      "args": ["nexus.api.main:app", "--reload" ]
     }
 
   ]
