--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "gpt-nexus"
+name = "nexus"
 version = "0.1.0"
 description = ""
 authors = ["Micheal Lanham <cxbxmxcx@gmail.com>"]
@@ -33,6 +33,6 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-nexus = "gpt_nexus.cli:main"
+nexus = "ai_agent_nexus.cli:main"
 
 
